[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "humblemetsuke",email = "tnarloch@hotmail.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
